@@ -11,3 +11,5 @@ t/ident.t
 t/local.t
 t/london.tz
 t/offset.t
+t/pod_cvg.t
+t/pod_syn.t
